;;;; -*- coding: utf-8; -*-
changes in sbcl-0.9.9 relative to sbcl-0.9.8:
  * new platform: experimental support for the Windows operating
    system has been added.  (thanks to Alastair Bridgewater)
  * fixed several bugs in and robustified the PPC FFI (including
    callbacks).  (thanks to Cyrus Harmon and Heiner Schwarte)
  * optimization: faster implementation of EQUAL
  * fixed segfaults on x86 FreeBSD 7-current (thanks to NIIMI Satoshi)

changes in sbcl-0.9.8 relative to sbcl-0.9.7:
  * minor incompatible change: (SETF CLASS-NAME) and (SETF
    GENERIC-FUNCTION-NAME) are generic functions once more (reverting
    the change in the 0.9.7 release).  (SETF CLASS-NAME) is specified
    by ANSI as a generic function, and for consistency (SETF
    GENERIC-FUNCTION-NAME) is treated likewise.
  * fixed bug #233.b: make constraint propagation notice when a variable
    value is changed after it is referenced but before it is used
  * fixed bug #296: no more arbitrary behaviour from filenames with
    odd characters as --load arguments.  (reported by Adam Warner)
  * fixed bug #390: :CHARACTER-SET pathname components now work as
    expected.  (reported by Tim Daly Jr)
  * fixed bug #391: complicated :TYPE intersections in slot
    definitions no longer cause an error in PCL internals.
  * fixed bug #392: plugged a hole in the obsolete-instance protocol.
  * bug fix: FILE-STRING-LENGTH is now external-format sensitive,
    returning the number of octets which would be written to the
    file-stream.  (thanks to Robert J. Macomber)
  * bug fix: the SB-SIMPLE-STREAMS contrib passes external-format
    arguments to the internal stream functions.  (thanks to David
    Lichteblau)
  * bug fix: stack exhaustion is now handled on the x86/SunOS
    platform.  (thanks to Daisuke Homma)
  * bug fix: more accurate ROOM results on GENCGC platforms
  * optimization: improved type inference for arithmetic-for
    index variables in LOOP